--- a/src/pages/home/components/HomeProducts.css
+++ b/src/pages/home/components/HomeProducts.css
@@ -21,21 +21,8 @@
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   }
 }
-
-/* banner style  */
-.bannerContainer {
-  display: grid;
-  gap: 1.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-}
-
-@media (min-width: 360px) {
-  .bannerContainer {
-    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
-  }
-}
-@media (min-width: 568px) {
-  .bannerContainer {
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+@media (min-width: 569px) and (max-width: 851px) {
+  .grid-container {
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   }
 }
